--- a/Selenium.Com.OrangeCRM/pom.xml
+++ b/Selenium.Com.OrangeCRM/pom.xml
@@ -1,15 +1,18 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.orangeCRM.test</groupId>
   <artifactId>com.orangeCRM</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <dependencies>
   		
+<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
     <artifactId>selenium-java</artifactId>
-    <version>3.141.5</version>
+    <version>4.16.1</version>
 </dependency>
+
 
 
 		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
@@ -77,15 +80,15 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 			<!-- Below plug-in is used to execute tests -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.18.1</version>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.19.1</version>
 				<configuration>
 					<suiteXmlFiles>
 						<!-- TestNG suite XML files -->
