--- a/Selenium.Com.OrangeCRM/pom.xml
+++ b/Selenium.Com.OrangeCRM/pom.xml
@@ -53,6 +53,12 @@
                  <artifactId>openxml4j</artifactId>
                  <version>1.0-beta</version>
           </dependency>
+          
+          <dependency>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-compiler-plugin</artifactId>
+  <version>3.8.1</version>
+</dependency>
   
   
   <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
